tests/baselines/reference/FunctionDeclaration8_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,12): error TS2304: Cannot find name 'yield'.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,20): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts (2 errors) ====
    var v = { [yield]: foo }
               ~~~~~
!!! error TS2304: Cannot find name 'yield'.
                       ~~~
!!! error TS2304: Cannot find name 'foo'.